force-app/main/default/objects/Transport_Zone__mdt/Transport_Zone__mdt.object-meta.xml
<CustomObject>
    <description>Defines tariff zones based on route distance and country. Each record represents a distance range (min ≤ distance &lt; max) mapped to a zone code. Used by the calculation engine to determine which pricing zone applies to a Trip.</description>
    <label>Transport Zone</label>
    <pluralLabel>Transport Zones</pluralLabel>
</CustomObject>