force-app/main/default/objects/Transport_Zone__mdt/fields/Coefficient__c.field-meta.xml
<CustomField>
    <fullName>Coefficient__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Zone multiplier coefficient. Reserved for future use (e.g., congestion adjustment, seasonal factor). Default value is 1.00, meaning no adjustment. When implemented, the base price will be multiplied by this coefficient.</description>
    <inlineHelpText>Zone multiplier (default 1.00). Reserved for future use. Leave at 1.00 unless instructed otherwise.</inlineHelpText>
    <label>Coefficient</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>