force-app/main/default/objects/Transport_Zone__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>ISO 3166-1 alpha-2 country code (e.g., FR, DE, UK, DK). The engine filters all zone records by matching this field against Trip__c.Country_Code__c. Each country can define its own set of distance-based zones.</description>
    <inlineHelpText>ISO country code (e.g., FR for France, DE for Germany). Zones are country-specific.</inlineHelpText>
    <label>Country Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>