force-app/main/default/objects/Transport_Zone__mdt/fields/Max_Distance_Km__c.field-meta.xml
<CustomField>
    <fullName>Max_Distance_Km__c</fullName>
    <description>Upper bound (exclusive) of the distance range in kilometers. The calculation engine evaluates: Trip distance &lt; Max_Distance_Km__c. For the last zone, use a high sentinel value (e.g., 99999.9).</description>
    <inlineHelpText>Maximum distance in km (exclusive). Example: 15.0. Use 99999.9 for the last zone with no upper limit.</inlineHelpText>
    <label>Max Distance Km</label>
    <precision>7</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>