force-app/main/default/objects/Transport_Zone__mdt/fields/Min_Distance_Km__c.field-meta.xml
<CustomField>
    <fullName>Min_Distance_Km__c</fullName>
    <description>Lower bound (inclusive) of the distance range in kilometers. The calculation engine evaluates: Min_Distance_Km__c ≤ Trip distance. Combined with Max_Distance_Km__c, this defines the zone bracket.</description>
    <inlineHelpText>Minimum distance in km (inclusive). Example: 0.0 for the first zone.</inlineHelpText>
    <label>Min Distance Km</label>
    <precision>7</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>