force-app/main/default/objects/Transport_Zone__mdt/fields/Zone_Code__c.field-meta.xml
<CustomField>
    <fullName>Zone_Code__c</fullName>
    <description>Alphanumeric code identifying the transport zone (e.g., A, B, C, D, E). This code is referenced by Transport_Rate__mdt.Zone_Code__c to link a zone to its pricing. It is also stored on Trip__c.Transport_Zone__c for audit purposes.</description>
    <inlineHelpText>Enter the zone code (e.g., A, B, C). This code must match the Zone Code used in Transport Rate records.</inlineHelpText>
    <label>Zone Code</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>